<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.action_items.ActionItemFragment"
    android:id="@+id/action_item_page_container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <secapstone.helper.pages.custom_ui.EditTextSearch
            android:id="@+id/searchActionItemsField"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/background_search"
            android:ems="10"
            android:fontFamily="@font/googlesans_medium"
            android:hint="Search Action Items"
            android:inputType="text"
            android:padding="16dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/searchButton"
            style="@style/PrimaryButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/icon_search_green"
            app:layout_constraintBottom_toBottomOf="@+id/searchActionItemsField"
            app:layout_constraintEnd_toEndOf="@+id/searchActionItemsField"
            app:layout_constraintTop_toTopOf="@+id/searchActionItemsField" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/action_item_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/googlesans_bold"
            android:text="Action Items"
            android:textColor="@color/colorPrimaryDarker"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchActionItemsField" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>